# silverbin

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  run.bat
include/: camera.h  shaders.h  text.h  textures.h  ui.h
include/engine_events/: intro.h
include/glad/: glad.h
include/shaders/: ebo.h  vao.h  vbo.h
lib/: freetype.lib
src/: camera.cpp  glad.c  main.cpp  shaders.cpp  text.cpp  textures.cpp  ui.cpp
src/engine_events/: intro.cpp
src/shaders/: default.vert  ebo.cpp  text.frag  text.vert  vao.cpp  vbo.cpp
